--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <select id="select1" class="form-select">
                      <option></option>        
                     <option>Bridgeway Motors LLP</option>
-                    <option>Coastal Private Limited</option>
+                    <option>Coastals Private Limited!!</option>
                     <option>Advaith Motors Private Limited</option>
                     <option>Berkeley Motors Limited</option>
                     <option>GlobalStar Auto LLP</option>
